test/spec/utf8-invalid-encoding.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/utf8-invalid-encoding.wast
(;; STDOUT ;;;
out/third_party/testsuite/utf8-invalid-encoding.wast:1: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.0.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\00\00\fe\ff"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:2: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.1.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\80"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:3: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.2.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\8f"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:4: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.3.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\90"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:5: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.4.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\9f"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:6: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.5.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\a0"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:7: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.6.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\bf"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:8: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.7.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c0\80"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:9: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.8.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c0\bf"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:10: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.9.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c1\80"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:11: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.10.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c1\bf"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:12: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.11.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c2\00"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:13: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.12.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c2\2e"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:14: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.13.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c2\7f"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:15: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.14.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c2\80\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:16: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.15.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c2\c0"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:17: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.16.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c2"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:18: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.17.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\c2\fd"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:19: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.18.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\df\00"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:20: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.19.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\df\7f"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:21: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.20.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\df\c0"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:22: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.21.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\df\fd"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:23: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.22.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\00\a0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:24: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.23.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\7f\a0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:25: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.24.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\80\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:26: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.25.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\80\a0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:27: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.26.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\9f\a0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:28: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.27.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\9f\bf"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:29: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.28.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\a0\00"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:30: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.29.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\a0\7f"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:31: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.30.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\a0\c0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:32: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.31.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\a0\fd"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:33: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.32.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\c0\a0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:34: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.33.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e0\fd\a0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:35: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.34.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\00\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:36: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.35.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\2e"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:37: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.36.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\7f\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:38: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.37.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\80\00"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:39: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.38.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\80\2e"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:40: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.39.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\80\7f"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:41: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.40.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\80\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:42: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.41.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\80\c0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:43: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.42.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\80"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:44: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.43.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\80\fd"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:45: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.44.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\c0\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:46: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.45.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:47: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.46.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\e1\fd\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:48: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.47.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ec\00\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:49: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.48.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ec\7f\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:50: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.49.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ec\80\00"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:51: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.50.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ec\80\7f"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:52: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.51.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ec\80\c0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:53: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.52.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ec\80\fd"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:54: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.53.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ec\c0\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:55: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.54.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ec\fd\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:56: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.55.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\00\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:57: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.56.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\7f\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:58: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.57.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\80\00"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:59: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.58.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\80\7f"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:60: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.59.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\80\c0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:61: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.60.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\80\fd"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:62: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.61.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\a0\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:63: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.62.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\a0\bf"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:64: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.63.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\bf\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:65: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.64.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\bf\bf"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:66: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.65.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\c0\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:67: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.66.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ed\fd\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:68: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.67.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ee\00\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:69: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.68.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ee\7f\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:70: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.69.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ee\80\00"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:71: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.70.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ee\80\7f"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:72: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.71.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ee\80\c0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:73: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.72.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ee\80\fd"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:74: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.73.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ee\c0\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:75: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.74.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ee\fd\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:76: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.75.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ef\00\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:77: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.76.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ef\7f\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:78: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.77.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ef\80\00"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:79: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.78.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ef\80\7f"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:80: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.79.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ef\80\c0"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:81: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.80.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ef\80\fd"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:82: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.81.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ef\c0\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:83: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.82.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ef\fd\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:84: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.83.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\00\90\90"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:85: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.84.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\7f\90\90"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:86: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.85.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\80\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:87: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.86.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\80\90\90"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:88: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.87.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\8f\90\90"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:89: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.88.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\8f\bf\bf"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:90: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.89.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\90\00\90"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:91: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.90.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\90\7f\90"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:92: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.91.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\90\90\00"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:93: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.92.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\90\90\7f"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:94: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.93.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\90\90\c0"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:95: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.94.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\90\90\fd"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:96: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.95.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\90\c0\90"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:97: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.96.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\90\fd\90"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:98: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.97.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\c0\90\90"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:99: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.98.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f0\fd\90\90"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:100: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.99.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\00\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:101: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.100.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\23"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:102: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.101.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\7f\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:103: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.102.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\00\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:104: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.103.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\23"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:105: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.104.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\7f\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:106: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.105.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\80\00"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:107: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.106.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\80\23"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:108: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.107.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\80\7f"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:109: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.108.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\80\80\80"))
                ^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:110: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.109.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\80\c0"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:111: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.110.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:112: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.111.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\80\fd"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:113: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.112.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\c0\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:114: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.113.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:115: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.114.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\80\fd\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:116: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.115.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\c0\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:117: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.116.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:118: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.117.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f1\fd\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:119: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.118.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\00\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:120: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.119.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\7f\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:121: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.120.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\80\00\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:122: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.121.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\80\7f\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:123: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.122.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\80\80\00"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:124: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.123.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\80\80\7f"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:125: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.124.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\80\80\c0"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:126: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.125.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\80\80\fd"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:127: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.126.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\80\c0\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:128: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.127.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\80\fd\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:129: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.128.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\c0\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:130: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.129.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f3\fd\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:131: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.130.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\00\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:132: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.131.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\7f\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:133: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.132.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\80\00\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:134: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.133.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\80\7f\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:135: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.134.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\80\80\00"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:136: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.135.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\80\80\7f"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:137: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.136.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\80\80\c0"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:138: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.137.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\80\80\fd"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:139: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.138.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\80\c0\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:140: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.139.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\80\fd\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:141: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.140.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\90\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:142: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.141.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\bf\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:143: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.142.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\c0\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:144: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.143.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f4\fd\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:145: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.144.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f5\80\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:146: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.145.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f7\80\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:147: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.146.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f7\bf\bf\bf"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:148: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.147.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f8\23"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:149: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.148.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f8\80\23"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:150: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.149.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f8\80\80\23"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:151: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.150.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f8\80\80\80\23"))
                ^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:152: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.151.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f8\80\80\80\80\80"))
                ^^^^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:153: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.152.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f8\80\80\80\80"))
                ^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:154: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.153.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f8\80\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:155: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.154.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f8\80\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:156: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.155.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f8\80"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:157: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.156.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\f8"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:158: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.157.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fb\bf\bf\bf\bf"))
                ^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:159: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.158.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\23"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:160: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.159.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\80\23"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:161: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.160.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\80\80\23"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:162: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.161.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\80\80\80\23"))
                ^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:163: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.162.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\80\80\80\80\23"))
                ^^^^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:164: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.163.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\80\80\80\80\80\80"))
                ^^^^^^^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:165: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.164.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\80\80\80\80\80"))
                ^^^^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:166: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.165.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\80\80\80\80"))
                ^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:167: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.166.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\80\80\80"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:168: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.167.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\80\80"))
                ^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:169: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.168.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc\80"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:170: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.169.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fc"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:171: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.170.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fd\bf\bf\bf\bf\bf"))
                ^^^^^^^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:172: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.171.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fe"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:173: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.172.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\fe\ff"))
                ^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:174: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.173.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ff"))
                ^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:175: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.174.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ff\fe\00\00"))
                ^^^^^^^^^^^^^^
out/third_party/testsuite/utf8-invalid-encoding.wast:176: assert_malformed passed:
  out/third_party/testsuite/utf8-invalid-encoding/utf8-invalid-encoding.175.wat:1:15: error: quoted string has an invalid utf-8 encoding
  (func (export "\ff\fe"))
                ^^^^^^^^
176/176 tests passed.
;;; STDOUT ;;)
